--- a/vue-cli/vue-playlist/package.json
+++ b/vue-cli/vue-playlist/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "json-server": "^0.12.1",
     "vue": "^2.5.2"
   },
   "devDependencies": {
