--- a/vue-cli/vue-playlist/package.json
+++ b/vue-cli/vue-playlist/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "json-server": "^0.12.1",
+    "lodash": "^4.17.5",
     "vue": "^2.5.2"
   },
   "devDependencies": {
