--- a/vue-cli/vue-playlist/package.json
+++ b/vue-cli/vue-playlist/package.json
@@ -10,9 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "json-server": "^0.12.1",
     "lodash": "^4.17.5",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vue-md-date-picker": "^1.0.15"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -31,6 +31,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "json-server": "^0.12.1",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
